# itgmania-testing

./: .clang-format  .cmake-format.yaml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Portable.ini  README.md  StepmaniaCore.cmake  vcpkg instructions.txt  vcpkg.json
.github/: dependabot.yml
.github/actions/setup-env/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: beta.yml  ci.yml  clang-format.yml  codeql.yml  ffmpeg-w32.yml  lint-yaml.yml  nightly.yml  release.yml  validate-xml.yml
BackgroundEffects/: Checkerboard2File2x2.lua
CMake/: CMakeMacros.cmake  CPackAppImageDependencies.cmake.in  CPackOverrides.cmake  CPackSetup.cmake  DefineOptions.cmake  SMDefs.cmake  SetupFfmpeg.cmake  SetupFfmpegCache.cmake  itgmania.appimage.desktop.in  license_install.txt
CMake/Modules/: FindDirectX.cmake  FindIconv.cmake  FindJACK.cmake  FindOSS.cmake  FindPulseAudio.cmake  FindXinerama.cmake  FindXrandr.cmake  FindXtst.cmake  Findnasm.cmake  Findudev.cmake  Findyasm.cmake  Installer.wxs  NSIS.template.in
Data/: Translations.xml
Docs/: KnownIssues.txt  Licenses.txt
Docs/Devdocs/: EnumDeviceProperties.txt
Docs/Luadoc/: Lua.xml  Lua.xsd  LuaDocumentation.xml
Installer/: setup.sh
Installer/mac/: guide.rtf  migrate-save-data.sh
NoteSkins/dance/flat/: metrics.ini
NoteSkins/pump/default/: NoteSkin.lua  metrics.ini
NoteSkins/pump/delta/: NoteSkin.lua  metrics.ini
NoteSkins/pump/delta-note/: metrics.ini
Songs/: instructions.txt
Themes/_fallback/: metrics.ini
Themes/_fallback/Graphics/: MusicWheelItem ParentCollapsed ColorPart.redir  MusicWheelItem ParentCollapsed OverPart.redir  MusicWheelItem ParentExpanded ColorPart.redir  MusicWheelItem ParentExpanded OverPart.redir
Themes/_fallback/Languages/: de.ini  en.ini  es.ini  fr.ini  ja.ini  ko.ini  nl.ini  pl.ini  sk.ini  zh-Hant.ini
Themes/_fallback/Scripts/: 03 Gameplay.lua
Utils/: Dockerfile-linux  build-release-linux.sh  build-release-macos.sh  build-release-windows.bat  doxygen_config
Utils/Texture Font Generator/: CMakeLists.txt  Texture Font Generator.cpp  Texture Font GeneratorDlg.cpp  Texture Font GeneratorDlg.h  TextureFont.cpp  Utils.cpp  build.bat  stdafx.h
Xcode/: Info.plist.in
src/: ActiveAttackList.cpp  ActiveAttackList.h  Actor.cpp  Actor.h  ActorFrame.cpp  ActorFrame.h  ActorFrameTexture.cpp  ActorFrameTexture.h  ActorMultiTexture.cpp  ActorMultiTexture.h  ActorMultiVertex.cpp  ActorMultiVertex.h  ActorProxy.cpp  ActorProxy.h  ActorScroller.cpp  ActorScroller.h  ActorSound.cpp  ActorSound.h  ActorUtil.cpp  ActorUtil.h  AdjustSync.cpp  AdjustSync.h  AnnouncerManager.cpp  AnnouncerManager.h  ArrowEffects.cpp  ArrowEffects.h  Attack.cpp  Attack.h  AttackDisplay.cpp  AttackDisplay.h  AutoActor.cpp  AutoActor.h  AutoKeysounds.cpp  AutoKeysounds.h  BGAnimation.cpp  BGAnimation.h  BGAnimationLayer.cpp  BGAnimationLayer.h  BPMDisplay.cpp  BPMDisplay.h  (+754 more)
src/RageUtil/: ConvertValue.h  Endian.h  LanguageInfo.cpp  LanguageInfo.h  RandomNumbers.cpp  RandomNumbers.h  Regex.cpp  Regex.h
src/Texture Font Generator/: Texture Font Generator.h  Texture Font GeneratorDlg.cpp  Texture Font GeneratorDlg.h  TextureFont.cpp  TextureFont.h  Utils.cpp  Utils.h  stdafx.h
src/arch/: RageDriver.cpp  RageDriver.h  arch_default.h
src/arch/ArchHooks/: ArchHooks.cpp  ArchHooks.h  ArchHooksUtil.cpp  ArchHooks_MacOSX.h  ArchHooks_MacOSX.mm  ArchHooks_Unix.cpp  ArchHooks_Unix.h  ArchHooks_Win32.cpp  ArchHooks_Win32.h  ArchHooks_Win32Static.cpp
src/arch/Dialog/: Dialog.cpp  Dialog.h  DialogDriver.cpp  DialogDriver.h  DialogDriver_MacOSX.cpp  DialogDriver_MacOSX.h  DialogDriver_Win32.cpp  DialogDriver_Win32.h
src/arch/InputHandler/: InputHandler.cpp  InputHandler.h  InputHandler_DirectInput.cpp  InputHandler_DirectInput.h  InputHandler_DirectInputHelper.cpp  InputHandler_DirectInputHelper.h  InputHandler_Linux_Event.cpp  InputHandler_Linux_Event.h  InputHandler_Linux_Joystick.cpp  InputHandler_Linux_Joystick.h  InputHandler_Linux_PIUIO.cpp  InputHandler_Linux_PIUIO.h  InputHandler_MacOSX_HID.h  InputHandler_MacOSX_HID.mm  InputHandler_MonkeyKeyboard.cpp  InputHandler_MonkeyKeyboard.h  InputHandler_NSEvent.hpp  InputHandler_NSEvent.mm  InputHandler_PumpHID.cpp  InputHandler_PumpHID.h  InputHandler_SDL.cpp  InputHandler_SDL.h  InputHandler_SextetStream.cpp  InputHandler_SextetStream.h  InputHandler_SextetStream.md  InputHandler_Win32_MIDI.cpp  InputHandler_Win32_MIDI.h  InputHandler_Win32_Para.h  InputHandler_Win32_Pump.cpp  InputHandler_Win32_Pump.h  InputHandler_Win32_RTIO.cpp  InputHandler_Win32_RTIO.h  InputHandler_Win32_SMX.cpp  InputHandler_Win32_SMX.h  InputHandler_Win32_ddrio.cpp  InputHandler_Win32_ddrio.h  InputHandler_X11.cpp  InputHandler_X11.h  LinuxInputManager.cpp  LinuxInputManager.h  (+1 more)
src/arch/Lights/: LightsDriver.cpp  LightsDriver.h  LightsDriver_Export.cpp  LightsDriver_Export.h  LightsDriver_GenericHID.cpp  LightsDriver_GenericHID.h  LightsDriver_HidBlueDot.cpp  LightsDriver_HidBlueDot.h  LightsDriver_LinuxParallel.cpp  LightsDriver_LinuxParallel.h  LightsDriver_LinuxWeedTech.cpp  LightsDriver_LinuxWeedTech.h  LightsDriver_Linux_ITGIO.cpp  LightsDriver_Linux_ITGIO.h  LightsDriver_Linux_Leds.cpp  LightsDriver_Linux_Leds.h  LightsDriver_Linux_PIUIO.cpp  LightsDriver_Linux_PIUIO.h  LightsDriver_Linux_PIUIOBTN_Leds.cpp  LightsDriver_Linux_PIUIOBTN_Leds.h  LightsDriver_Linux_PIUIO_Leds.cpp  LightsDriver_Linux_PIUIO_Leds.h  LightsDriver_MinimaidHID.cpp  LightsDriver_MinimaidHID.h  LightsDriver_PacDrive.cpp  LightsDriver_PacDrive.h  LightsDriver_fusion.cpp  (+18 more)
src/archutils/: SpecialDirs.h
src/main/: StepManiaMain.cpp
src/smpackage/: ChangeGameSettings.cpp  CreateLanguageDlg.cpp  EditInsallations.cpp  LanguagesDlg.cpp  MainMenuDlg.cpp  SMPackageInstallDlg.cpp  SMPackageInstallDlg.h  SMPackageUtil.cpp  SmpackageExportDlg.cpp  SmpackageExportDlg.h  smpackage.cpp  smpackageUtil.h
src/tests/: 00 README  test_audio_readers.cpp  test_file_errors.cpp  test_file_readers.cpp  test_misc.cpp  test_misc.h  test_scale.cpp  test_threads.cpp
(+165 files in other folders)
